Added first 5 questions of task 1

--- a/week_1/task_01.ipynb
+++ b/week_1/task_01.ipynb
@@ -1,9 +1,229 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f522925c-3cf9-4b13-8fe6-ca03bb047623",
+   "metadata": {},
+   "source": [
+    "# Task : Session 1\n",
+    "Solve these questions own your own and try to test yourself what you have learned in the session.\n",
+    "\n",
+    "Happy Learning!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2615edf0-2783-4b33-a096-2d150e8d110c",
+   "metadata": {},
+   "source": [
+    "### Q1 :- Print the given strings as per stated format.\n",
+    "\n",
+    "**Given strings**: \n",
+    "```\n",
+    "\"Data\" \"Science\" \"Mentorship\" \"Program\" \n",
+    "\"By\" \"CampusX\"\n",
+    "```\n",
+    "**Output**: \n",
+    "``` \n",
+    "Data-Science-Mentorship-Program-started-By-CampusX\n",
+    "```\n",
+    "\n",
+    "Concept- [Seperator and End]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "09f99c04-8665-4991-a29d-29a0151d91d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Data\" \"Science\" \"Mentorship\" \"Program\"\n",
+      "\"By\" \"CampusX\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\"Data\" \"Science\" \"Mentorship\" \"Program\"\\n\"By\" \"CampusX\"')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb95ede8-4a0e-448c-ad37-bbb7c1c5b221",
+   "metadata": {},
+   "source": [
+    "### Q2:- Write a program that will convert celsius value to fahrenheit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7f2f88f0-7b52-47af-addd-171120351f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Temperature in Celsius:  100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature in fahrenheit is: 212.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "celsius = float(input('Temperature in Celsius: '))\n",
+    "fahrenheit = (celsius * 9/5) + 32\n",
+    "print(f\"Temperature in fahrenheit is: {fahrenheit}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "547fecc1-0be1-4ef3-a3ec-1e76c792e30a",
+   "metadata": {},
+   "source": [
+    "### Q3:- Take 2 numbers as input from the user.Write a program to swap the numbers without using any special python syntax."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2613ae10-62f2-4fa5-b3c3-257184b14f7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your first number:  5\n",
+      "Enter your second number:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f_num is 10\n",
+      "s_num is 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "f_num = int(input(\"Enter your first number: \"))\n",
+    "s_num = int(input(\"Enter your second number: \"))\n",
+    "\n",
+    "temp = f_num\n",
+    "f_num = s_num\n",
+    "s_num = temp\n",
+    "\n",
+    "print(f\"f_num is {f_num}\")\n",
+    "print(f\"s_num is {s_num}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90471ad1-58df-4fd9-8dad-7c67024c37c8",
+   "metadata": {},
+   "source": [
+    "### Q4:- Write a program to find the euclidean distance between two coordinates.Take both the coordinates from the user as input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "9e0a4836-7fbb-4bc3-8922-72df4df51554",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter x1:  14\n",
+      "Enter y1:  51\n",
+      "Enter x2:  12\n",
+      "Enter y2:  57\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Euclidean distance between the two points is: 6.32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Taking input for the first coordinate (x1, y1)\n",
+    "x1 = float(input(\"Enter x1: \"))\n",
+    "y1 = float(input(\"Enter y1: \"))\n",
+    "\n",
+    "# Taking input for the second coordinate (x2, y2)\n",
+    "x2 = float(input(\"Enter x2: \"))\n",
+    "y2 = float(input(\"Enter y2: \"))\n",
+    "\n",
+    "# Calculating the Euclidean distance without math module\n",
+    "distance = ((x2 - x1)**2 + (y2 - y1)**2) ** 0.5\n",
+    "\n",
+    "# Displaying the result\n",
+    "print(f\"The Euclidean distance between the two points is: {distance:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6525221-0e54-47f1-b538-72c457135e65",
+   "metadata": {},
+   "source": [
+    "### Q5:- Write a program to find the simple interest when the value of principle,rate of interest and time period is provided by the user.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ab65dbc1-ee7e-4cb0-919e-3d010dc5b22b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the principal amount:  5000\n",
+      "Enter the rate of interest (in %):  5\n",
+      "Enter the time period (in years):  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Simple Interest is: 500.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Taking input from the user\n",
+    "principal = float(input(\"Enter the principal amount: \"))\n",
+    "rate = float(input(\"Enter the rate of interest (in %): \"))\n",
+    "time = float(input(\"Enter the time period (in years): \"))\n",
+    "\n",
+    "# Calculating simple interest\n",
+    "simple_interest = (principal * rate * time) / 100\n",
+    "\n",
+    "# Displaying the result\n",
+    "print(f\"The Simple Interest is: {simple_interest:.2f}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e283787-684e-4578-b9cb-5aeda32ce69d",
+   "id": "3cc17bb8-5411-4d17-a581-1b790dd5d3ff",
    "metadata": {},
    "outputs": [],
    "source": []
