Added week_1 first task

--- a/week_1/task_01.ipynb
+++ b/week_1/task_01.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "09f99c04-8665-4991-a29d-29a0151d91d5",
    "metadata": {},
    "outputs": [
@@ -41,13 +41,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"Data\" \"Science\" \"Mentorship\" \"Program\"\n",
-      "\"By\" \"CampusX\"\n"
+      "DataScienceMentorshipProgram-started-ByCampusX\n"
      ]
     }
    ],
    "source": [
-    "print('\"Data\" \"Science\" \"Mentorship\" \"Program\"\\n\"By\" \"CampusX\"')"
+    "print(\"Data\" \"Science\" \"Mentorship\" \"Program\", sep='-', end='-started-')\n",
+    "print(\"By\" \"CampusX\", sep='-')"
    ]
   },
   {
@@ -221,12 +221,234 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31d57f25-9a37-4c34-a1a8-e97e577048db",
+   "metadata": {},
+   "source": [
+    "### Q6:- Write a program that will tell the number of dogs and chicken are there when the user will provide the value of total heads and legs.\n",
+    "\n",
+    "For example:\n",
+    "Input:\n",
+    "heads -> 4\n",
+    "legs -> 12\n",
+    "<br>\n",
+    "Output:\n",
+    "dogs -> 2\n",
+    "chicken -> 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "36441920-e3cf-4d92-bbed-c862ae739e3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter total number of heads:  8\n",
+      "Enter total number of legs:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No valid solution exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Program to find the number of dogs and chickens\n",
+    "# based on total heads and legs\n",
+    "\n",
+    "# Input from user\n",
+    "heads = int(input(\"Enter total number of heads: \"))\n",
+    "legs = int(input(\"Enter total number of legs: \"))\n",
+    "\n",
+    "\n",
+    "\n",
+    "dogs = (legs - 2 * heads) // 2\n",
+    "chickens = heads - dogs\n",
+    "\n",
+    "# Check for validity\n",
+    "if dogs < 0 or chickens < 0 or legs % 2 != 0:\n",
+    "    print(\"No valid solution exists.\")\n",
+    "else:\n",
+    "    print(f\"Dogs -> {dogs}\")\n",
+    "    print(f\"Chickens -> {chickens}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5250f3c-046e-44da-b99e-ffb332429b60",
+   "metadata": {},
+   "source": [
+    "### Q7:- Write a program to find the sum of squares of first n natural numbers where n will be provided by the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5c4d98ac-37ec-4783-9d7e-45018b78d629",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number:  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "result = (n*(n+1)*(2*n + 1)) / 6\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b7eec92-3820-443d-9222-95e11da0ceb0",
+   "metadata": {},
+   "source": [
+    "### Q8:- Given the first 2 terms of an Arithmetic Series.Find the Nth term of the series. Assume all inputs are provided by the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3629fe72-7b94-4b1f-acb2-ea15ef3ef12a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the first term:  2\n",
+      "Enter the second term:  4\n",
+      "Enter the value of n 9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_term = int(input(\"Enter the first term: \"))\n",
+    "second_term = int(input(\"Enter the second term: \"))\n",
+    "n = int(input(\"Enter the value of n\"))\n",
+    "\n",
+    "d = second_term - first_term\n",
+    "\n",
+    "an = first_term + (n - 1) * d\n",
+    "print(an)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2be0ff7-3145-4c98-b729-82f316558820",
+   "metadata": {},
+   "source": [
+    "### Q9:- Given 2 fractions, find the sum of those 2 fractions.Take the numerator and denominator values of the fractions from the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a8dbe1bb-2b6b-4e1b-b450-90788e726805",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter num1:  12\n",
+      "Enter den1:  15\n",
+      "Enter num2:  41\n",
+      "Enter den2:  52\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1239/780\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = int(input(\"Enter num1: \"))\n",
+    "d1 = int(input(\"Enter den1: \"))\n",
+    "n2 = int(input(\"Enter num2: \"))\n",
+    "d2 = int(input(\"Enter den2: \"))\n",
+    "\n",
+    "rn = n1*d2 + n2*d1\n",
+    "rd = d1 * d2\n",
+    "\n",
+    "print('{}/{}'.format(rn, rd))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d474d3c1-d375-4d31-acf0-006e741a1d0c",
+   "metadata": {},
+   "source": [
+    "### Q10:- Given the height, width and breadth of a milk tank, you have to find out how many glasses of milk can be obtained? Assume all the inputs are provided by the user.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Input:<br>\n",
+    "Dimensions of the milk tank<br>\n",
+    "H = 20cm, L = 20cm, B = 20cm\n",
+    "<br><br>\n",
+    "Dimensions of the glass<br>\n",
+    "h = 3cm, r = 1cm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cc17bb8-5411-4d17-a581-1b790dd5d3ff",
+   "id": "4c1fee60-7926-430a-8455-c52390cbdb59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "# Input values\n",
+    "H = float(input(\"Enter height of tank (cm): \"))\n",
+    "L = float(input(\"Enter length of tank (cm): \"))\n",
+    "B = float(input(\"Enter breadth of tank (cm): \"))\n",
+    "\n",
+    "h = float(input(\"Enter height of glass (cm): \"))\n",
+    "r = float(input(\"Enter radius of glass (cm): \"))\n",
+    "\n",
+    "# Volume calculations\n",
+    "tank_volume = H * L * B\n",
+    "glass_volume = math.pi * (r ** 2) * h\n",
+    "\n",
+    "# Number of glasses\n",
+    "num_glasses = tank_volume / glass_volume\n",
+    "\n",
+    "print(f\"\\nNumber of glasses of milk that can be obtained: {int(num_glasses)}\")\n"
+   ]
   }
  ],
  "metadata": {
