first 4 questions of task_02

--- a/week_1/task_01.ipynb
+++ b/week_1/task_01.ipynb
@@ -425,10 +425,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "4c1fee60-7926-430a-8455-c52390cbdb59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter height of tank (cm):  21\n",
+      "Enter length of tank (cm):  12\n",
+      "Enter breadth of tank (cm):  23\n",
+      "Enter height of glass (cm):  54\n",
+      "Enter radius of glass (cm):  213\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of glasses of milk that can be obtained: 0\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -449,6 +469,14 @@
     "\n",
     "print(f\"\\nNumber of glasses of milk that can be obtained: {int(num_glasses)}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd129792-03c0-437f-a863-83c0f2d4b7ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
