Added upto problem 15

--- a/week_1/task_03.ipynb
+++ b/week_1/task_03.ipynb
@@ -720,6 +720,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d40ca76-72fc-427b-a006-62db41172b96",
+   "metadata": {},
+   "source": [
+    "### Problem 10`: Write a program that will take 2 numbers as input and prints the LCM and HCF of those 2 numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "id": "f567b69f-6f9e-4529-a1d2-fd492c46c83a",
@@ -799,12 +807,224 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "210a3ab4-afd1-41f9-8899-45cdd957a3f5",
+   "metadata": {},
+   "source": [
+    "### **Problem 11:** Create Short Form from initial character\n",
+    "Given a string create short form ofthe string from Initial character. Short form should be capitalised.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "`Input:`\n",
+    "```\n",
+    "Data science mentorship program\n",
+    "```\n",
+    "\n",
+    "`Output:`\n",
+    "```\n",
+    "DSMP\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "92ba65d7-f72e-4264-acb9-cae1f1dc6223",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DSMP\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp = 'Data Science Mentorship Program' \n",
+    "\n",
+    "res = ''\n",
+    "for i in inp.split():\n",
+    "    res += i[0].upper()\n",
+    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a319ae58-6a3f-48e9-bdfc-475a58d040c3",
+   "metadata": {},
+   "source": [
+    "### Problem 12`: Append second string in the middle of first string\n",
+    "\n",
+    "`Input:`\n",
+    "```\n",
+    "campusx\n",
+    "data\n",
+    "```\n",
+    "`Output`:\n",
+    "\n",
+    "```\n",
+    "camdatapusx\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9c0eb17a-b1ad-45f8-8e5f-8a89bb4caf02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the Ist string:  hello\n",
+      "Enter the 2nd string:  world\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heworldllo\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = input('Enter the Ist string: ')\n",
+    "s2 = input('Enter the 2nd string: ')\n",
+    "\n",
+    "print(s1[0:int(len(s1)/2)] + s2 + s1[int(len(s1)/2):])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68b9b2b4-3fa4-436e-912e-a71ab3ca9976",
+   "metadata": {},
+   "source": [
+    "### Problem 13: Given string contains a combination of the lower and upper case letters. Write a program to arrange the characters of a string so that all lowercase letters should come first.\n",
+    "\n",
+    "Given:\n",
+    "\n",
+    "`str1 = PyNaTive`\n",
+    "\n",
+    "Expected Output:\n",
+    "\n",
+    "`yaivePNT`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "39bb46c1-bb27-41f3-9cdf-c71878eadb64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yaivePNT\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"PyNaTive\"\n",
+    "\n",
+    "upper = \"\"\n",
+    "lower = \"\"\n",
+    "\n",
+    "for i in s:\n",
+    "    if i.islower():\n",
+    "        lower += i\n",
+    "    else: \n",
+    "        upper += i\n",
+    "print(lower + upper)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9035e49a-a094-456e-9fda-6d5e60f56d80",
+   "metadata": {},
+   "source": [
+    "### Problem 14: Take a alphanumeric string input and print the sum and average of the digits that appear in the string, ignoring all other characters.\n",
+    "\n",
+    "Input:\n",
+    "\n",
+    "`hel123O4every093`\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "```\n",
+    "Sum: 22\n",
+    "Avg: 2.75\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8639b731-d406-4eb7-8066-ed15e9300cfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n",
+      "3.142857142857143\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"hel123O4every093\"\n",
+    "\n",
+    "sum = 0\n",
+    "count = 0 \n",
+    "for i in s:\n",
+    "    if i.isdigit():\n",
+    "        sum += int(i)\n",
+    "        count += 1\n",
+    "\n",
+    "print(sum)\n",
+    "print(sum/count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6af9950e-8250-4cee-9bac-50fc5532ee7c",
+   "metadata": {},
+   "source": [
+    "### Problem 15: Removal of all characters from a string except integers\n",
+    "`Given:`\n",
+    "\n",
+    "```\n",
+    "str1 = 'I am 25 years and 10 months old'\n",
+    "```\n",
+    "`Expected Output:`\n",
+    "```\n",
+    "2510\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "095a4887-ba5b-40cd-ab14-9e458c09588c",
+   "id": "1422a4c3-52b8-48b8-8c1b-afe1608bf7ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"I am 25 years and 10 months old\"\n",
+    "\n",
+    "res = \"\"\n",
+    "for i in s:\n",
+    "    if i.isdigit():\n",
+    "        res += i\n",
+    "\n",
+    "print(res)\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
