--- a/week_1/task_03.ipynb
+++ b/week_1/task_03.ipynb
@@ -1010,10 +1010,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1422a4c3-52b8-48b8-8c1b-afe1608bf7ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2510\n"
+     ]
+    }
+   ],
    "source": [
     "s = \"I am 25 years and 10 months old\"\n",
     "\n",
@@ -1024,6 +1032,269 @@
     "\n",
     "print(res)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2581ee65-ae04-4277-8ff9-c2941ace4c4b",
+   "metadata": {},
+   "source": [
+    "### Problem 16: Check whether the string is Symmetrical.\n",
+    "\n",
+    "**Statement:** Given a string. the task is to check if the string is symmetrical or not. A string is said to be symmetrical if both the halves of the string are the same.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "`Input`\n",
+    "\n",
+    "```bash\n",
+    "khokho\n",
+    "```\n",
+    "\n",
+    "`Output`\n",
+    "\n",
+    "```bash\n",
+    "The entered string is symmetrical\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "acf575e2-0fa6-44b3-8d7c-cc50e2fd68c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the string:  khokho\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Symmetrical\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"Enter the string: \")\n",
+    "\n",
+    "if len(s)%2 == 0:\n",
+    "    s1 = s[0:len(s)//2]\n",
+    "    s2 = s[len(s)//2:]\n",
+    "else: \n",
+    "     s1 = s[0:len(s)//2]\n",
+    "     s2 = s[len(s)//2 + 1:]\n",
+    "\n",
+    "if s1 == s2:\n",
+    "    print(\"Symmetrical\")\n",
+    "else:\n",
+    "    print(\"Not symmetrical\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c96e003b-b2cf-4587-bc95-f51b74850791",
+   "metadata": {},
+   "source": [
+    "### Problem 17: Reverse words in a given String\n",
+    "\n",
+    "**Statement:** We are given a string and we need to reverse words of a given string.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "`Input:`\n",
+    "\n",
+    "```bash\n",
+    "geeks quiz practice code\n",
+    "```\n",
+    "\n",
+    "`Output:`\n",
+    "\n",
+    "```bash\n",
+    "code practice quiz geeks\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "`Input:`\n",
+    "\n",
+    "```bash\n",
+    "my name is laxmi\n",
+    "```\n",
+    "\n",
+    "`Output:`\n",
+    "\n",
+    "```bash\n",
+    "laxmi is name my\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d2134363-9da0-41b1-b353-17258f7fa246",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "khan is name my\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'my name is khan'\n",
+    "\n",
+    "L = [i for i in s.split()]\n",
+    "L = L[::-1]\n",
+    "print(\" \".join(L))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67856574-db5c-45af-ade2-415477406712",
+   "metadata": {},
+   "source": [
+    "### Problem 18: Find uncommon words from two Strings.\n",
+    "\n",
+    "**Statement:** Given two sentences as strings **A** and **B**. The task is to return a list of all uncommon words. A word is uncommon if it appears exactly once in any one of the sentences, and does not appear in the other sentence. Note: A sentence is a string of space-separated words. Each word consists only of lowercase letters.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "`Input:`\n",
+    "\n",
+    "```bash\n",
+    "A = \"apple banana mango\" \n",
+    "B = \"banana fruits mango\"\n",
+    "```\n",
+    "\n",
+    "`Output:`\n",
+    "\n",
+    "```bash\n",
+    "['apple', 'fruits']\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c571b687-17b0-41b2-b0f9-ace7ee98ac58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'fruits']\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = \"apple banana mango\" \n",
+    "B = \"banana fruits mango\"\n",
+    "\n",
+    "L = []\n",
+    "for i in A.split():\n",
+    "    if i not in B and i not in L:\n",
+    "        L.append(i)\n",
+    "for j in B.split():\n",
+    "    if j not in A and j not in L:\n",
+    "        L.append(j)\n",
+    "\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d4b13d0-74f1-4493-a693-4757a3f019b3",
+   "metadata": {},
+   "source": [
+    "### Problem 19: Word location in String.\n",
+    "\n",
+    "**Statement:** Find a location of a word in a given sentence.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "`Input:`\n",
+    "\n",
+    "```bash\n",
+    "Sentence: We can learn data science through campusx mentorship program.\n",
+    "\n",
+    "word: campusx\n",
+    "```\n",
+    "\n",
+    "`Output:`\n",
+    "\n",
+    "```bash\n",
+    "Location of the word is 7.\n",
+    "```\n",
+    "\n",
+    "Note- Don't use index/find functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a5042088-bfa4-4c98-bacc-7864bf2fbf3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"We can learn data science through campusx mentorship program.\"\n",
+    "word = \"campusx\"\n",
+    "pos = 0\n",
+    "for i in s.split():\n",
+    "    pos += 1\n",
+    "    if i == word:\n",
+    "        break\n",
+    "print(pos)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95bfb388-b25a-42ba-a7e0-58e94ee54a67",
+   "metadata": {},
+   "source": [
+    "### Problem 20: Write a program that can remove all the duplicate characters from a string. User will provide the input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "9e24dec8-a17b-423c-9b15-1b0a7ca80750",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcef\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"aaabbbccceeefff\"\n",
+    "\n",
+    "res = \"\"\n",
+    "for i in s:\n",
+    "    if i not in res:\n",
+    "        res += i\n",
+    "\n",
+    "print(res)"
    ]
   }
  ],
