--- a/week_02/task_05.ipynb
+++ b/week_02/task_05.ipynb
@@ -235,11 +235,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ffefa53-4289-4063-a8be-304b9ea8bc30",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter No of records-  jfkjs\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'jfkjs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Number of student records\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter No of records- \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      4\u001b[0m students \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Collect each student's details\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'jfkjs'"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of student records\n",
+    "n = int(input(\"Enter No of records- \"))\n",
+    "\n",
+    "students = []\n",
+    "\n",
+    "# Collect each student's details\n",
+    "for i in range(1, n + 1):\n",
+    "    print(f\"Enter Details of student-{i}\")\n",
+    "    name = input(\"Enter Student name- \")\n",
+    "    education = input(\"Enter Higher Education- \")\n",
+    "    skill = input(\"Enter Primary Skill- \")\n",
+    "    grad_year = input(\"Enter Year of Graduation- \")\n",
+    "    \n",
+    "    # Store each record as a tuple\n",
+    "    students.append((name, education, skill, grad_year))\n",
+    "\n",
+    "# Job role requirement\n",
+    "print(\"\\nEnter Job Role Requirement\")\n",
+    "req_skill = input(\"Enter Skill- \")\n",
+    "req_education = input(\"Enter Higher Education- \")\n",
+    "req_year = input(\"Enter Year of Graduation- \")\n",
+    "\n",
+    "# Filtering candidates\n",
+    "matched = []\n",
+    "\n",
+    "for s in students:\n",
+    "    if s[1] == req_education and s[2] == req_skill and s[3] == req_year:\n",
+    "        matched.append(s)\n",
+    "\n",
+    "# Output result\n",
+    "if matched:\n",
+    "    for m in matched:\n",
+    "        print(m)\n",
+    "else:\n",
+    "    print(\"No such candidate\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8444587e-d6e0-481b-9d6f-c1829bb35c6b",
+   "metadata": {},
+   "source": [
+    "# Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "274a91b1-534e-42a6-af80-80882fb3aec0",
+   "metadata": {},
+   "source": [
+    "### Q1: Write a program to find a set of common elements in three lists using sets.\n",
+    "```\n",
+    "Input : ar1 = [1, 5, 10, 20, 40, 80]\n",
+    "        ar2 = [6, 7, 20, 80, 100]\n",
+    "        ar3 = [3, 4, 15, 20, 30, 70, 80, 120]\n",
+    "\n",
+    "Output : [80, 20]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c6c921ee-ccfe-46ef-971c-6c022f1e3df4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[80, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar1 = set([1, 5, 10, 20, 40, 80])\n",
+    "ar2 = set([6, 7, 20, 80, 100])\n",
+    "ar3 = set([3, 4, 15, 20, 30, 70, 80, 120])\n",
+    "\n",
+    "result = (ar1 & ar2) & ar3\n",
+    "print(list(result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b2b377b-9ec2-4e57-a22b-84a0df355315",
+   "metadata": {},
+   "source": [
+    "### Q2: Write a program to count the unique number of vowels using sets in a given string. Lowercase and uppercase vowels will be taken as different.\n",
+    "\n",
+    "`Input:`\n",
+    "```\n",
+    "Str1 = \"hands-on data science mentorship progrAm with live classes at an affordable fee only on Campus.X.\"\n",
+    "```\n",
+    "`Output:`\n",
+    "```\n",
+    "No of unique vowels-6\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5b455bf8-2ec9-4984-b662-8d81d0b142d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No of unique vowels- 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "vowels = set(\"aeiouAEIOU\")\n",
+    "s = set(\"hands-on data science mentorship progrAm with live classes at an affordable fee only on Campus.X.\")\n",
+    "\n",
+    "print(\"No of unique vowels-\",len(s & vowels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5849718-6315-4214-a1b2-91985f0d9d63",
+   "metadata": {},
+   "source": [
+    "### Q3:  Write a program to Check if a given string is a binary string or not. \n",
+    "\n",
+    "A string is said to be binary if it consists of only two unique characters.\n",
+    "\n",
+    "Take string input from the user. \n",
+    "\n",
+    "```\n",
+    "Input: str = \"01010101010\"\n",
+    "Output: Yes\n",
+    "\n",
+    "Input: str = \"1222211\"\n",
+    "Output: Yes\n",
+    "\n",
+    "Input: str = \"Campusx\"\n",
+    "Output: No\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7b70fcfb-7be5-4eb2-8053-0c5253409235",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary.\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"010101010\"\n",
+    "\n",
+    "if len(set(s)) == 2:\n",
+    "    print(\"Binary.\")\n",
+    "else:\n",
+    "    print(\"Not Binary.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea38c076-7a0a-44c2-9f44-f4e9c3c1a09f",
+   "metadata": {},
+   "source": [
+    "### Q4: find union of n arrays.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "Input:\n",
+    "```bash\n",
+    "[[1, 2, 2, 4, 3, 6],\n",
+    " [5, 1, 3, 4],\n",
+    " [9, 5, 7, 1],\n",
+    " [2, 4, 1, 3]]\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "\n",
+    "[1, 2, 3, 4, 5, 6, 7, 9]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "27084c6d-fe3a-4bb1-8d1a-18fe5a4b3b1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [[1, 2, 2, 4, 3, 6],\n",
+    " [5, 1, 3, 4],\n",
+    " [9, 5, 7, 1],\n",
+    " [2, 4, 1, 3]]\n",
+    "\n",
+    "s = set()\n",
+    "\n",
+    "for i in L:\n",
+    "    s.update(i)\n",
+    "\n",
+    "print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92f88148-e2aa-4075-a966-00de573781a2",
+   "metadata": {},
+   "source": [
+    "### Q5: Intersection of two lists. Intersection of two list means we need to take all those elements which are common to both of the initial lists and store them into another list. Only use using **list-comprehension**.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "Input:\n",
+    "```bash\n",
+    "lst1 = {15, 9, 10, 56, 23, 78, 5, 4, 9}\n",
+    "lst2 = {9, 4, 5, 36, 47, 26, 10, 45, 87}\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "```bash\n",
+    "[9, 10, 4, 5]\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "Input:\n",
+    "\n",
+    "lst1 = {4, 9, 1, 17, 11, 26, 28, 54, 69}\n",
+    "lst2 = {9, 9, 74, 21, 45, 11, 63, 28, 26}\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "[9, 11, 26, 28]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a288bc35-ac98-46e1-aa16-9ee90bade10a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst1 = {4, 9, 1, 17, 11, 26, 28, 54, 69} \n",
+    "lst2 = {9, 9, 74, 21, 45, 11, 63, 28, 26}\n",
+    "\n",
+    "[item for item in lst1 if item in lst2]"
+   ]
   }
  ],
  "metadata": {
