Completed problem set of task_05

--- a/week_02/task_05.ipynb
+++ b/week_02/task_05.ipynb
@@ -511,16 +511,348 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "a288bc35-ac98-46e1-aa16-9ee90bade10a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 11, 26, 28]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lst1 = {4, 9, 1, 17, 11, 26, 28, 54, 69} \n",
     "lst2 = {9, 9, 74, 21, 45, 11, 63, 28, 26}\n",
     "\n",
     "[item for item in lst1 if item in lst2]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0e23853-d63f-429d-96ac-a41aeb6efdbe",
+   "metadata": {},
+   "source": [
+    "# Dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54d88b27-0c99-4f56-b909-1686829d11f5",
+   "metadata": {},
+   "source": [
+    "### Q1: Key with maximum unique values\n",
+    "\n",
+    "Given a dictionary with values list, extract key whose value has most unique values.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "Input:\n",
+    "\n",
+    "```bash\n",
+    "test_dict = {\"CampusX\" : [5, 7, 9, 4, 0], \"is\" : [6, 7, 4, 3, 3], \"Best\" : [9, 9, 6, 5, 5]}\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "```bash\n",
+    "CampusX\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "Input:\n",
+    "```bash\n",
+    "test_dict = {\"CampusX\" : [5, 7, 7, 7, 7], \"is\" : [6, 7, 7, 7], \"Best\" : [9, 9, 6, 5, 5]}\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "```bash\n",
+    "Best\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "8a1fc704-86b8-4712-b0e8-2f9021bc375e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_dict = {\"CampusX\" : [5, 7, 7, 7, 7], \"is\" : [6, 7, 7, 7], \"Best\" : [9, 9, 6, 5, 5]}\n",
+    "\n",
+    "max_value = 0\n",
+    "max_key = \"\"\n",
+    "for i in test_dict:\n",
+    "    if max_value < len(set(test_dict[i])):\n",
+    "        max_value = len(set(test_dict[i]))\n",
+    "        max_key = i\n",
+    "\n",
+    "print(max_key)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b7920cb-de5e-4510-ad6c-9e315901363a",
+   "metadata": {},
+   "source": [
+    "### Q2: Replace words from the Dictionary. Given a String, replace its words from the lookup dictionary.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "Input:\n",
+    "\n",
+    "```bash\n",
+    "test_str = 'CampusX best for DS students.'\n",
+    "repl_dict = {\"best\" : \"is the best channel\", \"DS\" : \"Data-Science\"}\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "```bash\n",
+    "CampusX is the best channel for Data-Science students.\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "Input:\n",
+    "```bash\n",
+    "test_str = 'CampusX best for DS students.'\n",
+    "repl_dict = {\"good\" : \"is the best channel\", \"ds\" : \"Data-Science\"}\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "```bash\n",
+    "CampusX best for DS students.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "9daeaba6-de33-4198-a872-f1e28fe08487",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CampusX is the best channel for Data-Science students.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = 'CampusX best for DS students.'\n",
+    "repl_dict = {\"best\" : \"is the best channel\", \"DS\" : \"Data-Science\"}\n",
+    "\n",
+    "result = []\n",
+    "for i in test_str.split():\n",
+    "    if i in repl_dict:\n",
+    "        result.append(repl_dict[i])\n",
+    "    else:\n",
+    "        result.append(i)\n",
+    "\n",
+    "print(\" \".join(result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dcd5407-0aef-4c89-9e6e-28df0920ed68",
+   "metadata": {},
+   "source": [
+    "### Q3: Convert List to List of dictionaries. Given list values and keys list, convert these values to key value pairs in form of list of dictionaries.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "Input:\n",
+    "```bash\n",
+    "test_list = [\"DataScience\", 3, \"is\", 8]\n",
+    "key_list = [\"name\", \"id\"]\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "```bash\n",
+    "[{'name': 'DataScience', 'id': 3}, {'name': 'is', 'id': 8}]\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "Input:\n",
+    "```bash\n",
+    "test_list = [\"CampusX\", 10]\n",
+    "key_list = [\"name\", \"id\"]\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "```bash\n",
+    "[{'name': 'CampusX', 'id': 10}]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "9f5445ab-0526-44e8-84fd-dc1fc799205a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'DataScience', 'id': 3}, {'name': 'is', 'id': 8}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_list = [\"DataScience\", 3, \"is\", 8]\n",
+    "key_list = [\"name\", \"id\"]\n",
+    "\n",
+    "n = len(test_list)\n",
+    "result = []\n",
+    "\n",
+    "for i in range(0,n,2):\n",
+    "    result.append({key_list[0]: test_list[i], key_list[1]: test_list[i + 1]})\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60113a73-48f8-4071-be85-414f68c04830",
+   "metadata": {},
+   "source": [
+    "### Q4: Convert a list of Tuples into Dictionary.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "Input:\n",
+    "```bash\n",
+    "[(\"akash\", 10), (\"gaurav\", 12), (\"anand\", 14), (\"suraj\", 20), (\"akhil\", 25), (\"ashish\", 30)]\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "```bash\n",
+    "{'akash': [10], 'gaurav': [12], 'anand': [14], 'suraj': [20], 'akhil': [25], 'ashish': [30]}\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "Input:\n",
+    "```bash\n",
+    "[('A', 1), ('B', 2), ('C', 3)]\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "```bash\n",
+    "{'A': [1], 'B': [2], 'C': [3]}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "cf3bac1c-46f8-4fd8-a159-5245f207d6de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'akash': [10], 'gaurav': [12], 'anand': [14], 'suraj': [20], 'akhil': [25], 'ashish': [30]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [(\"akash\", 10), (\"gaurav\", 12), (\"anand\", 14), (\"suraj\", 20), (\"akhil\", 25), (\"ashish\", 30)]\n",
+    "d= {}\n",
+    "\n",
+    "for (i,j) in L:\n",
+    "    d[i] = [j]\n",
+    "\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "991245b8-7f0a-4f8b-b1d8-1b70515570e1",
+   "metadata": {},
+   "source": [
+    "### Q5: Sort Dictionary key and values List.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "Input:\n",
+    "\n",
+    "```bash\n",
+    "{'c': [3], 'b': [12, 10], 'a': [19, 4]}\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "```bash\n",
+    "{'a': [4, 19], 'b': [10, 12], 'c': [3]}\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "Input:\n",
+    "\n",
+    "```bash\n",
+    "{'c': [10, 34, 3]}\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "```bash\n",
+    "{'c': [3, 10, 34]}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "143a3543-02f1-4b29-a220-b9bf0c37124f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': [4, 19], 'b': [10, 12], 'c': [3]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'c': [3], 'b': [12, 10], 'a': [19, 4]}\n",
+    "\n",
+    "res = {}\n",
+    "for i in sorted(d):\n",
+    "    res[i] = sorted(d[i])\n",
+    "\n",
+    "print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24e1f783-1c32-4182-be1c-987a903d4c35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
